Apply newer jdk code styles.